<resources>
    <string name="app_name">Mario Kart Character Randomizer</string>
    <string name="historyButton">History</string>
    <string name="Mario_pic_description">A picture of Mario in a kart from the game Mario Kart 8 Deluxe, smiling and punching the air with his left fist.</string>
    <string name="logo_pic_description">Graphic display of the title of the app, \"Mario Kart 8 Deluxe Randomizer\".</string>
    <string name="random_build_title">YOUR BUILD IS:</string>
    <string name="saved_builds_title"></string>
    <string name="player_number_query">Enter the number of players.</string>

    <string name="char_image_p1_description">The character of player 1\'s randomized build.</string>
    <string name="char_image_p2_description">The character of player 2\'s randomized build.</string>
    <string name="char_image_p3_description">The character of player 3\'s randomized build.</string>
    <string name="char_image_p4_description">The character of player 4\'s randomized build.</string>
    <string name="frame_image_p1_description">The frame of player 1\'s randomized build.</string>
    <string name="frame_image_p2_description">The frame of player 2\'s randomized build.</string>
    <string name="frame_image_p3_description">The frame of player 3\'s randomized build.</string>
    <string name="frame_image_p4_description">The frame of player 4\'s randomized build.</string>
    <string name="wheel_image_p1_description">The wheels of player 1\'s randomized build.</string>
    <string name="wheel_image_p2_description">The wheels of player 2\'s randomized build.</string>
    <string name="wheel_image_p3_description">The wheels of player 3\'s randomized build.</string>
    <string name="wheel_image_p4_description">The wheels of player 4\'s randomized build.</string>
    <string name="glider_image_p1_description">The glider of player 1\'s randomized build.</string>
    <string name="glider_image_p2_description">The glider of player 2\'s randomized build.</string>
    <string name="glider_image_p3_description">The glider of player 3\'s randomized build.</string>
    <string name="glider_image_p4_description">The glider of player 4\'s randomized build.</string>

    <string name="kartsButton1">Only Karts 1P</string>
    <string name="kartsButton2">Only Karts 2P</string>
    <string name="kartsButton3">Only Karts 3P</string>
    <string name="kartsButton4">Only Karts 4P</string>
    <string name="bikesButton1">Only Bikes 1P</string>
    <string name="bikesButton2">Only Bikes 2P</string>
    <string name="bikesButton3">Only Bikes 3P</string>
    <string name="bikesButton4">Only Bikes 4P</string>
    <string name="allButton1">All Frames 1P</string>
    <string name="allButton2">All Frames 2P</string>
    <string name="allButton3">All Frames 3P</string>
    <string name="allButton4">All Frames 4P</string>

    <string name="mario">Mario</string>
    <string name="luigi">Luigi</string>
    <string name="peach">Peach</string>
    <string name="daisy">Daisy</string>
    <string name="rosalina">Rosalina</string>
    <string name="tanooki_mario">Tanooki Mario</string>
    <string name="cat_peach">Cat Peach</string>
    <string name="yoshi_green">Yoshi (Green)</string>
    <string name="yoshi_white">Yoshi (White)</string>
    <string name="yoshi_black">Yoshi (Black)</string>
    <string name="yoshi_lightblue">Yoshi (Light Blue)</string>
    <string name="yoshi_darkblue">Yoshi (Dark Blue)</string>
    <string name="yoshi_pink">Yoshi (Pink)</string>
    <string name="yoshi_yellow">Yoshi (Yellow)</string>
    <string name="yoshi_orange">Yoshi (Orange)</string>
    <string name="yoshi_red">Yoshi (Red)</string>
    <string name="toad">Toad</string>
    <string name="koopa_troopa">Koopa Troopa</string>
    <string name="shy_guy_black">Shy Guy (Black)</string>
    <string name="shy_guy_white">Shy Guy (White)</string>
    <string name="shy_guy_red">Shy Guy (Red)</string>
    <string name="shy_guy_green">Shy Guy (Green)</string>
    <string name="shy_guy_yellow">Shy Guy (Yellow)</string>
    <string name="shy_guy_orange">Shy Guy Orange</string>
    <string name="shy_guy_lightblue">Shy Guy (Light Blue)</string>
    <string name="shy_guy_darkblue">Shy Guy (Dark Blue)</string>
    <string name="shy_guy_pink">Shy Guy (Pink)</string>
    <string name="lakitu">Lakitu</string>
    <string name="toadette">Toadette</string>
    <string name="king_boo">King Boo</string>
    <string name="baby_mario">Baby Mario</string>
    <string name="baby_luigi">Baby Luigi</string>
    <string name="baby_peach">Baby Peach</string>
    <string name="baby_daisy">Baby Daisy</string>
    <string name="baby_rosalina">Baby Rosalina</string>
    <string name="metal_mario_gold">Metal Mario (Gold)</string>
    <string name="metal_mario_metal">Metal Mario (Metal)</string>
    <string name="pink_gold_peach">Pink Gold Peach</string>
    <string name="wario">Wario</string>
    <string name="waluigi">Waluigi</string>
    <string name="donkey_kong">Donkey Kong</string>
    <string name="bowser">Bowser</string>
    <string name="dry_bones">Dry Bones</string>
    <string name="bowser_jr">Bowser Jr.</string>
    <string name="dry_bowser">Dry Bowser</string>
    <string name="lemmy">Lemmy</string>
    <string name="wendy">Wendy</string>
    <string name="roy">Roy</string>
    <string name="morton">Morton</string>
    <string name="iggy">Iggy</string>
    <string name="larry">Larry</string>
    <string name="ludwig">Ludwig</string>
    <string name="inkling_girl_orange">Inkling Girl (Orange)</string>
    <string name="inkling_girl_pink">Inkling Girl (Pink)</string>
    <string name="inkling_girl_green">Inkling Girl (Green)</string>
    <string name="inkling_boy_darkblue">Inkling Boy (Dark Blue)</string>
    <string name="inkling_boy_lightblue">Inkling Boy (Light Blue)</string>
    <string name="inkling_boy_purple">Inkling Boy (Purple)</string>
    <string name="link_botw">Link (BOTW)</string>
    <string name="link_classic">Link (Classic)</string>
    <string name="villager_boy">Villager (B)</string>
    <string name="villager_girl">Villager (G)</string>
    <string name="isabelle">Isabelle</string>
    <string name="mii">Mii</string>

    <string name="player1">Player 1</string>
    <string name="player1caps">PLAYER ONE</string>
    <string name="player2">Player 2</string>
    <string name="player2caps">PLAYER TWO</string>
    <string name="player3">Player 3</string>
    <string name="player3caps">PLAYER THREE</string>
    <string name="player4">Player 4</string>
    <string name="player4caps">PLAYER FOUR</string>

    <string name="standard_kart">Standard Kart</string>
    <string name="pipe_frame">Pipe Frame</string>
    <string name="mach_8">Mach 8</string>
    <string name="steel_driver">Steel Driver</string>
    <string name="cat_cruiser">Cat Cruiser</string>
    <string name="circuit_special">Circuit Special</string>
    <string name="trispeeder">Tri-Speeder</string>
    <string name="badwagon">Badwagon</string>
    <string name="biddybuggy">Biddybuggy</string>
    <string name="prancer">Prancer</string>
    <string name="landship">Landship</string>
    <string name="sneeker">Sneeker</string>
    <string name="sports_coupe">Sports Coupe</string>
    <string name="gold_standard">Gold Standard</string>
    <string name="gla">GLA</string>
    <string name="silver_arrow">W 25 Silver Arrow</string>
    <string name="roadster">300 SL Roadster</string>
    <string name="blue_falcon">Blue Falcon</string>
    <string name="tanooki_kart">Tanooki Kart</string>
    <string name="b_dasher">B Dasher</string>
    <string name="streetle">Streetle</string>
    <string name="p_wing">P-Wing</string>
    <string name="koopa_clown">Koopa Clown</string>
    <string name="standard_bike">Standard Bike</string>
    <string name="the_duke">The Duke</string>
    <string name="flame_rider">Flame Rider</string>
    <string name="varmint">Varmint</string>
    <string name="mr_scooty">Mr. Scooty</string>
    <string name="city_tripper">City Tripper</string>
    <string name="master_cycle_zero">Master Cycle Zero</string>
    <string name="comet">Comet</string>
    <string name="sports_bike">Sports Bike</string>
    <string name="jet_bike">Jet Bike</string>
    <string name="yoshi_bike">Yoshi Bike</string>
    <string name="master_cycle">Master Cycle</string>
    <string name="standard_atv">Standard ATV</string>
    <string name="wild_wiggler">Wild Wiggler</string>
    <string name="teddy_buggy">Teddy Buggy</string>
    <string name="bone_rattler">Bone Rattler</string>
    <string name="splat_buggy">Splat Buggy</string>
    <string name="inkstriker">Inkstriker</string>

    <string name="standard_tires">Standard Tires</string>
    <string name="monster_tires">Monster Tires</string>
    <string name="roller_tires">Roller Tires</string>
    <string name="slim_tires">Slim Tires</string>
    <string name="slick_tires">Slick Tires</string>
    <string name="metal_tires">Metal Tires</string>
    <string name="button_tires">Button Tires</string>
    <string name="off_road_tires">Off-Road Tires</string>
    <string name="sponge_tires">Sponge Tires</string>
    <string name="wood_tires">Wood Tires</string>
    <string name="cushion_tires">Cushion Tires</string>
    <string name="blue_standard_tires">Blue Standard Tires</string>
    <string name="monster_tires_hot">Hot Monster Tires</string>
    <string name="roller_tires_azure">Azure Roller Tires</string>
    <string name="slim_tires_crimson">Crimson Slim Tires</string>
    <string name="slick_tires_cyber">Cyber Slick Tires</string>
    <string name="off_road_tires_retro">Retro Off-Road Tires</string>
    <string name="gold_tires">Gold Tires</string>
    <string name="gla_tires">GLA Tires</string>
    <string name="triforce_tires">Triforce Tires</string>
    <string name="leaf_tires">Leaf Tires</string>
    <string name="ancient_tires">Ancient Tires</string>

    <string name="super_glider">Super Glider</string>
    <string name="cloud_glider">Cloud Glider</string>
    <string name="wario_wing">Wario Wing</string>
    <string name="waddle_wing">Waddle Wing</string>
    <string name="parasol">Peach Parasol</string>
    <string name="parachute">Parachute</string>
    <string name="parafoil">Parafoil</string>
    <string name="parafoil_mktv">MKTV Parafoil</string>
    <string name="flower_glider">Flower Glider</string>
    <string name="bowser_kite">Bowser Kite</string>
    <string name="plane_glider">Plane Glider</string>
    <string name="gold_glider">Gold Glider</string>
    <string name="hylian_kite">Hylian Kite</string>
    <string name="paper_glider">Paper Glider</string>
    <string name="paraglider">Paraglider</string>

    <string name="default_error">Default ERROR</string>
    <string name="blank"></string>
</resources>
