<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/all1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="all1"
        android:text="@string/allButton1"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/bikes1"
        app:layout_constraintEnd_toStartOf="@+id/all2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/all2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="all2"
        android:text="@string/allButton2"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/bikes2"
        app:layout_constraintEnd_toStartOf="@+id/all3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/all1" />

    <Button
        android:id="@+id/all3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="all3"
        android:text="@string/allButton3"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/bikes3"
        app:layout_constraintEnd_toStartOf="@+id/all4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/all2" />

    <Button
        android:id="@+id/all4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="all4"
        android:text="@string/allButton4"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/bikes4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/all3" />

    <Button
        android:id="@+id/bikes1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="bikes1"
        android:text="@string/bikesButton1"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/karts1"
        app:layout_constraintEnd_toStartOf="@id/bikes2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bikes2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="bikes2"
        android:text="@string/bikesButton2"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/karts2"
        app:layout_constraintEnd_toStartOf="@id/bikes3"
        app:layout_constraintStart_toEndOf="@id/bikes1" />

    <Button
        android:id="@+id/bikes3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="bikes3"
        android:text="@string/bikesButton3"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/karts3"
        app:layout_constraintEnd_toStartOf="@id/bikes4"
        app:layout_constraintStart_toEndOf="@id/bikes2" />

    <Button
        android:id="@+id/bikes4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="bikes4"
        android:text="@string/bikesButton4"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/karts4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bikes3" />

    <Button
        android:id="@+id/karts1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="128dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="karts1"
        android:text="@string/kartsButton1"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/karts2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/karts2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="128dp"
        android:background="#CA0000"
        android:onClick="karts2"
        android:text="@string/kartsButton2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/karts3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/karts1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/karts3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="128dp"
        android:background="#CA0000"
        android:onClick="karts3"
        android:text="@string/kartsButton3"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/karts4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/karts2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/karts4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="128dp"
        android:background="#CA0000"
        android:onClick="karts4"
        android:text="@string/kartsButton4"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/karts3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mario_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/Mario_pic_description"
        android:scaleType="fitCenter"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:translationY="-35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomizer_logo"
        app:srcCompat="@drawable/mario_kart_8_deluxe_mario_artwork" />

    <ImageView
        android:id="@+id/randomizer_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/logo_pic_description"
        android:scaleType="fitStart"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toTopOf="@id/mario_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_randomizer" />

    <Button
        android:id="@+id/tester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="testButton"
        android:text="@string/cushion_tires"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/karts3"
        app:layout_constraintTop_toBottomOf="@+id/karts4" />

</androidx.constraintlayout.widget.ConstraintLayout>