<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayRandomNoBikes">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/random_build_title"
        android:textColor="#FF0000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/charImage2a"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="charImage2a"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/frameImage2a"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerText2a"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/charImage2b"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="charImage2b"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/frameImage2b"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerText2b"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/charImage2c"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="charImage2c"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/frameImage2c"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerText2c"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/charImage2d"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="charImage2d"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/frameImage2d"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerText2d"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/frameImage2a"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="frameImage2a"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/wheelImage2a"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/charImage2a"
                app:layout_constraintTop_toBottomOf="@+id/playerText2a"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/frameImage2b"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="frameImage2b"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/wheelImage2b"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/charImage2b"
                app:layout_constraintTop_toBottomOf="@+id/playerText2b"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/frameImage2c"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="frameImage2c"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/wheelImage2c"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/charImage2c"
                app:layout_constraintTop_toBottomOf="@+id/playerText2c"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/frameImage2d"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="frameImage2d"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/wheelImage2d"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/charImage2d"
                app:layout_constraintTop_toBottomOf="@+id/playerText2d"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/wheelImage2a"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="wheelImage2a"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/gliderImage2a"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/frameImage2a"
                app:layout_constraintTop_toBottomOf="@+id/playerText2a"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/wheelImage2b"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="wheelImage2b"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/gliderImage2b"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/frameImage2b"
                app:layout_constraintTop_toBottomOf="@+id/playerText2b"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/wheelImage2c"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="wheelImage2c"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/gliderImage2c"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/frameImage2c"
                app:layout_constraintTop_toBottomOf="@+id/playerText2c"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/wheelImage2d"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="wheelImage2d"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/gliderImage2d"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/frameImage2d"
                app:layout_constraintTop_toBottomOf="@+id/playerText2d"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/gliderImage2a"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="gliderImage2a"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/wheelImage2a"
                app:layout_constraintTop_toBottomOf="@+id/playerText2a"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/gliderImage2b"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="gliderImage2b"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/wheelImage2b"
                app:layout_constraintTop_toBottomOf="@+id/playerText2b"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/gliderImage2c"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="gliderImage2c"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/wheelImage2c"
                app:layout_constraintTop_toBottomOf="@+id/playerText2c"
                app:srcCompat="@drawable/invisible" />

            <ImageView
                android:id="@+id/gliderImage2d"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="gliderImage2d"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/wheelImage2d"
                app:layout_constraintTop_toBottomOf="@+id/playerText2d"
                app:srcCompat="@drawable/invisible" />

            <TextView
                android:id="@+id/playerText2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1"
                android:textColor="#7EC72F"
                android:textSize="18sp"
                app:fontFamily="@font/russo_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/playerText2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/blank"
                android:textColor="#008CFD"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameImage2a" />

            <TextView
                android:id="@+id/playerText2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/blank"
                android:textColor="#D700FD"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameImage2b" />

            <TextView
                android:id="@+id/playerText2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/blank"
                android:textColor="#FD9800"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameImage2c" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>